util: treat fuse.sshfs as a network filesystem

https://bugs.freedesktop.org/show_bug.cgi?id=73727